@@ -9,6 +9,8 @@ class SettingsManager : public QObject
 {
     Q_OBJECT
     Q_PROPERTY(int kiwixServerPort READ getKiwixServerPort NOTIFY portChanged)
+    Q_PROPERTY(qreal zoomFactor READ getZoomFactor NOTIFY zoomChanged)
+
 public:
     explicit SettingsManager(QObject *parent = nullptr);
     virtual ~SettingsManager() {};
@@ -19,17 +21,21 @@ public:
 public slots:
     void setKiwixServerPort(int port);
     int getKiwixServerPort() { return m_kiwixServerPort; };
+    void setZoomFactor(qreal zoomFactor);
+    qreal getZoomFactor() { return m_zoomFactor; };
 
 private:
     void setSettings();
 
 signals:
     void portChanged(int port);
+    void zoomChanged(qreal zoomFactor);
 
 private:
     QSettings m_settings;
     bool m_settingsViewDisplayed;
     int m_kiwixServerPort;
+    qreal m_zoomFactor;
 };
 
 #endif // SETTINGSMANAGER_H
